Initialize CatBoost project scaffold with CLI and config
Add a minimal CatBoost project structure supporting configuration-driven training and a command-line interface. Includes Makefile, pyproject.toml, example YAML config, package source with CLI, config, and model utilities, as well as a basic test for config loading. Update README with usage instructions and expand .gitignore for Python, data, and development artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,71 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+env/
+venv/
+.venv/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Unit test / coverage reports
+.pytest_cache/
+.coverage
+.coverage.*
+coverage.xml
+htmlcov/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# mypy
+.mypy_cache/
+
+# Ruff
+.ruff_cache/
+
+# VSCode
+.vscode/
+
+# MacOS
+.DS_Store
+
+# Data & artifacts
+data/*.csv
+data/*.parquet
+models/
+artifacts/
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
 *.py[codz]
 *$py.class
 
