--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ dev = [
   "ruff>=0.4.0",
   "mypy>=1.8.0",
   "ipykernel>=6.29.0",
+  "jupyterlab>=4.1.0",
+  "nbstripout>=0.6.1",
 ]
 
 [project.scripts]
