--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dev = [
 
 [project.scripts]
 dalong-catboost = "dalong_catboost.cli:main"
+dalong-catboost-predict = "dalong_catboost.predict_cli:main"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
